--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,34 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
+/* .card{
+  height: 400px;
+  overflow: hidden;
+} */
+.card:hover .hover-div {
+  opacity: .5;
+}
+.hover-div {
+  position: absolute;
+  top: 9px;
+  bottom: 0;
+  left: 9px;
+  right: 0;
+  height: 79%;
+  width: 95%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+  border-radius: 10px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
